fix account layout bug

--- a/TripGuide/src/main/resources/static/styles/css/accountpage.css
+++ b/TripGuide/src/main/resources/static/styles/css/accountpage.css
@@ -181,3 +181,9 @@ ul {
 	font-size: 15px;
 }
 
+#destinations {
+	width: 100%;
+	margin-top: 40px;
+	clear: both;
+}
+
